--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "pg": "^7.11.0",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^5.8.6",
-    "sqlite3": "^4.0.8"
+    "socket.io": "^2.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
