update models, implement http api, write tests

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "http-errors": "latest",
+    "http-status": "^1.3.2",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.8.6",
@@ -15,9 +17,15 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "chai-http": "^4.3.0"
+    "chai-http": "^4.3.0",
+    "faker": "^4.1.0",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.19.0",
+    "sequelize-cli": "^5.4.0",
+    "sqlite3": "^4.0.8"
   },
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
